@@ -1,6 +1,7 @@
 package org.jabref.gui.linkedfile;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 
@@ -10,29 +11,29 @@ import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.ActionHelper;
 import org.jabref.gui.actions.SimpleCommand;
 import org.jabref.gui.fieldeditors.LinkedFileViewModel;
-import org.jabref.gui.util.TaskExecutor;
+import org.jabref.gui.preferences.GuiPreferences;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.util.TaskExecutor;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.field.StandardField;
-import org.jabref.preferences.PreferencesService;
 
 public class AttachFileFromURLAction extends SimpleCommand {
 
     private final StateManager stateManager;
     private final DialogService dialogService;
-    private final PreferencesService preferencesService;
+    private final GuiPreferences preferences;
     private final TaskExecutor taskExecutor;
 
     public AttachFileFromURLAction(DialogService dialogService,
                                    StateManager stateManager,
                                    TaskExecutor taskExecutor,
-                                   PreferencesService preferencesService) {
+                                   GuiPreferences preferences) {
         this.stateManager = stateManager;
         this.dialogService = dialogService;
         this.taskExecutor = taskExecutor;
-        this.preferencesService = preferencesService;
+        this.preferences = preferences;
 
         this.executable.bind(ActionHelper.needsEntriesSelected(1, stateManager));
     }
@@ -60,14 +61,14 @@ public class AttachFileFromURLAction extends SimpleCommand {
         }
 
         try {
-            URL url = new URL(urlforDownload.get());
+            URL url = URI.create(urlforDownload.get()).toURL();
             LinkedFileViewModel onlineFile = new LinkedFileViewModel(
                              new LinkedFile(url, ""),
                              entry,
                              databaseContext,
                              taskExecutor,
                              dialogService,
-                             preferencesService);
+                    preferences);
             onlineFile.download(true);
         } catch (MalformedURLException exception) {
             dialogService.showErrorDialogAndWait(Localization.lang("Invalid URL"), exception);
