@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.net.HttpCookie;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -106,8 +107,8 @@ public class GoogleScholar implements FulltextFetcher, PagedSearchBasedFetcher {
                 if (!target.isEmpty() && new URLDownload(target).isPdf()) {
                     // TODO: check title inside pdf + length?
                     // TODO: report error function needed?! query -> result
-                    LOGGER.info("Fulltext PDF found @ Google: " + target);
-                    pdfLink = Optional.of(new URL(target));
+                    LOGGER.info("Fulltext PDF found @ Google: {}", target);
+                    pdfLink = Optional.of(URI.create(target).toURL());
                     break;
                 }
             }
