@@ -2,6 +2,7 @@ package org.jabref.logic.importer;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 import java.util.Set;
@@ -20,51 +21,59 @@ import static org.mockito.Mockito.when;
 @FetcherTest
 class FulltextFetchersTest {
 
-    private BibEntry entry = new BibEntry();
+    /**
+     * Required for testing the FulltextFetchers class.
+     * That code is not put to the FulltextFetcher class itself, because subclasses of FulltextFetcher should implement the getTrustLevel method.
+     */
+    private interface FulltextFetcherWithTrustLevel extends FulltextFetcher {
+        default TrustLevel getTrustLevel() {
+            return TrustLevel.UNKNOWN;
+        }
+    }
 
     @Test
     void acceptPdfUrls() throws MalformedURLException {
-        URL pdfUrl = new URL("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf");
-        FulltextFetcher finder = e -> Optional.of(pdfUrl);
+        URL pdfUrl = URI.create("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf").toURL();
+        FulltextFetcherWithTrustLevel finder = e -> Optional.of(pdfUrl);
         FulltextFetchers fetcher = new FulltextFetchers(Set.of(finder));
-        assertEquals(Optional.of(pdfUrl), fetcher.findFullTextPDF(entry));
+        assertEquals(Optional.of(pdfUrl), fetcher.findFullTextPDF(new BibEntry()));
     }
 
     @Test
     void rejectNonPdfUrls() throws MalformedURLException {
-        URL pdfUrl = new URL("https://github.com/JabRef/jabref/blob/master/README.md");
-        FulltextFetcher finder = e -> Optional.of(pdfUrl);
+        URL pdfUrl = URI.create("https://github.com/JabRef/jabref/blob/master/README.md").toURL();
+        FulltextFetcherWithTrustLevel finder = e -> Optional.of(pdfUrl);
         FulltextFetchers fetcher = new FulltextFetchers(Set.of(finder));
 
-        assertEquals(Optional.empty(), fetcher.findFullTextPDF(entry));
+        assertEquals(Optional.empty(), fetcher.findFullTextPDF(new BibEntry()));
     }
 
     @Test
     void noTrustLevel() throws MalformedURLException {
-        URL pdfUrl = new URL("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf");
-        FulltextFetcher finder = e -> Optional.of(pdfUrl);
+        URL pdfUrl = URI.create("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf").toURL();
+        FulltextFetcherWithTrustLevel finder = e -> Optional.of(pdfUrl);
         FulltextFetchers fetcher = new FulltextFetchers(Set.of(finder));
 
-        assertEquals(Optional.of(pdfUrl), fetcher.findFullTextPDF(entry));
+        assertEquals(Optional.of(pdfUrl), fetcher.findFullTextPDF(new BibEntry()));
     }
 
     @Test
     void higherTrustLevelWins() throws IOException, FetcherException {
+        // set an (arbitrary) DOI to the test entry to skip side effects inside the "findFullTextPDF" method
+        BibEntry entry = new BibEntry().withField(StandardField.DOI, "10.5220/0007903201120130");
+
         FulltextFetcher finderHigh = mock(FulltextFetcher.class);
         when(finderHigh.getTrustLevel()).thenReturn(TrustLevel.SOURCE);
-        final URL highUrl = new URL("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf");
+        final URL highUrl = URI.create("http://docs.oasis-open.org/wsbpel/2.0/OS/wsbpel-v2.0-OS.pdf").toURL();
         when(finderHigh.findFullText(entry)).thenReturn(Optional.of(highUrl));
 
         FulltextFetcher finderLow = mock(FulltextFetcher.class);
         when(finderLow.getTrustLevel()).thenReturn(TrustLevel.UNKNOWN);
-        final URL lowUrl = new URL("http://docs.oasis-open.org/opencsa/sca-bpel/sca-bpel-1.1-spec-cd-01.pdf");
+        final URL lowUrl = URI.create("http://docs.oasis-open.org/opencsa/sca-bpel/sca-bpel-1.1-spec-cd-01.pdf").toURL();
         when(finderLow.findFullText(entry)).thenReturn(Optional.of(lowUrl));
 
-        FulltextFetchers fetcher = new FulltextFetchers(Set.of(finderLow, finderHigh));
+        FulltextFetchers fetchers = new FulltextFetchers(Set.of(finderLow, finderHigh));
 
-        // set an (arbitrary) DOI to the test entry to skip side effects inside the "findFullTextPDF" method
-        entry.setField(StandardField.DOI, "10.5220/0007903201120130");
-
-        assertEquals(Optional.of(highUrl), fetcher.findFullTextPDF(entry));
+        assertEquals(Optional.of(highUrl), fetchers.findFullTextPDF(entry));
     }
 }
